--- a/dojo/makefile
+++ b/dojo/makefile
@@ -1,4 +1,11 @@
 include .deosrc
 
-all:
-	@ echo "Hello, world!"
+all: clean build
+	@clear
+	$(BIN)/a.out
+
+build:
+	clang -std=c89 src/main.c -o bin/a.out
+
+clean:
+	-rm $(BIN)/a.out
