--- a/.deosrc
+++ b/.deosrc
@@ -7,6 +7,7 @@ export MAKEFLAGS   := --no-print-directory
 CC                 := clang++
 STD                := c++11
 BIN                := $(CURDIR)/bin
+EXT                := $(CURDIR)/ext
 INCLUDE            := $(CURDIR)/include
 LIB                := $(CURDIR)/lib
 OBJ                := $(CURDIR)/obj
