--- a/.deosrc
+++ b/.deosrc
@@ -1,19 +1,23 @@
-export MAKEFLAGS   := --no-print-directory
-.DEFAULT_GOAL      := all
-.SUBLIME_TARGETS:     all
-.PHONY:               all\
-                      build\
-                      clean
-CC                 := clang++
-STD                := c++11
-BIN                := $(CURDIR)/bin
-EXT                := $(CURDIR)/ext
-INCLUDE            := $(CURDIR)/include
-LIB                := $(CURDIR)/lib
-OBJ                := $(CURDIR)/obj
-SRC                := $(CURDIR)/src
-TEST               := $(CURDIR)/test
-EXE                := $(BIN)/a.out
-MAIN               := $(SRC)/main.cpp
-FILES              := $(wildcard $(LIB)/*.cpp)
-OBJECTS            := $(patsubst $(LIB)/%,$(OBJ)/%,$(FILES:.cpp=.o))
+export MAKEFLAGS:=--no-print-directory
+export VM_BOX:=bento/ubuntu-16.04
+export VM_PATH:=/deos
+export VM_SHELL:=bash -c 'BASH_ENV=/etc/profile exec bash'
+
+.DEFAULT_GOAL:=all
+.SUBLIME_TARGETS:all
+.PHONY:all build clean
+
+BASEDIR:=$(CURDIR)
+BIN:=$(BASEDIR)/bin
+EXT:=$(BASEDIR)/ext
+INCLUDE:=$(BASEDIR)/include
+LIB:=$(BASEDIR)/lib
+OBJ:=$(BASEDIR)/obj
+SRC:=$(BASEDIR)/src
+TEST:=$(BASEDIR)/test
+FILES:=$(wildcard $(LIB)/*.cpp)
+OBJECTS:=$(patsubst $(LIB)/%,$(OBJ)/%,$(FILES:.cpp=.o))
+CC:=clang++
+STD:=c++11
+MAIN:=$(SRC)/main.cpp
+EXE:=$(BIN)/a.out
