--- a/.deosrc
+++ b/.deosrc
@@ -1,6 +1,7 @@
 export MAKEFLAGS:=--no-print-directory
 export VM_BOX:=bento/ubuntu-16.04
 export VM_PATH:=/deos
+export VM_SHELL_SSH:=bash -l
 export VM_SHELL:=bash -c 'BASH_ENV=/etc/profile exec bash'
 
 .DEFAULT_GOAL:=all
