--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "ext/bitcoin"]
 	path = ext/bitcoin
-	url = git@github.com:47d/bitcoin.git
+	url = https://github.com/47d/bitcoin.git
 [submodule "ext/cuckoo"]
 	path = ext/cuckoo
-	url = git@github.com:47d/cuckoo.git
+	url = https://github.com/47d/cuckoo.git
